--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    
+<!-- Navigation Section-->
+    <nav class="navbar navbar-expand-lg bg-body-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="images/Tour Travel Business Logo.png" alt="logo" width="100"/></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +25,31 @@
         </div>
       </div>
     </nav>
+<!-- End Navigation Section -->
 
+            <!-- Hero Section-->
+            <section class="bg-warning text-dark text-center">
+              <div class="container1">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                  <div>
+                    <h1>"yOU wANNA tRAVEL tHE wORLD wITH uS?"</h1>
+                    <div class="container">
+                    <p style="text-align: center p-5">Hello and Welcome if you are new and Welcome back if you've been here before.
+                      My name is Esther Babirye and I am the founder of Estini Travel Tours. Travelling has been at the center of my heart
+                      for a long time, experiencing the world and all its beauty, meeting people with different cultures and creating memories
+                      is truly magical. Estini Travel Tours invites you to experience travelling with like
+                      minded people, with a catered itinery which has been created by me, so sit back relax and enjoy the journey whilst i take
+                      you around to experience the best these beautiful destinations have to offer.
+                    </p>
+                  </div>
+                  </div>
+                  <div class="container2">
+                    <img class="img-fluid w-100 height-100vh" src="images/7msBs4eoR7GeIbQe1cfq_7xy990U23MkQsO5L.jpeg" alt="" />
+                </div>
+                </div>
+              </div>
+              </section>
+              <!-- End Hero Section -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
