--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Esthers Travel Tours</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+
 <!-- Navigation Section-->
-    <nav class="navbar navbar-expand-lg bg-body-light">
+    <nav class="navbar navbar-expand-md bg-body-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="images/Tour Travel Business Logo.png" alt="logo" width="100"/></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,8 +18,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="#About Section">About Us</a>
-            <a class="nav-link" href="#Work Section">Travel Destinations</a>
+            <a class="nav-link" href="#About Section">About</a>
+            <a class="nav-link" href="#Work Section">Travel</a>
             <a class="nav-link" href="Skills Section">Skills</a>
             <a class="nav-link" href="Contact Section">Contact Us</a>
           </div>
