added list of skills to learn in skills section

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
         <!-- Skills Section -->
           <section class="bg-body-light">
           <div class="grid-container">
-            <h1 class="text-center p-5 mb-5 mt-5">EDX Bootcamp Skills</h1>
+            <h1 class="text-center p-5 mb-3 mt-3">EDX BOOT CAMP SKILLS</h1>
               <ul class="list-group">
-                <li class="list-group-item list-group-item-primary"><h5 class="text-bold">Skills I expect to learn from the EDX Bootcamp</h5></li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Morbi leo risus</li>
-                <li class="list-group-item">Porta ac consectetur ac</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item list-group-item-primary"><h5 class="text-bold text-center">Skills I Expect To learn From The Skills Bootcamp In Front-end Web Development</h5></li>
+                <li class="list-group-item text-center">Tremendous communication, teamwork, analytic, critical thinking and problem solving skills</li>
+                <li class="list-group-item text-center">Have a solid working knowledge of HTML and CSS and master coding with HTML and CSS</li>
+                <li class="list-group-item text-center">Have a deeper understanding of Javascript and its frameworks</li>
+                <li class="list-group-item text-center">Learning good visual communication and user interface design</li>
               </ul>
             </div>
             </section>
