--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
 <!-- Navigation Section-->
-    <nav class="navbar navbar-expand-md bg-body-light">
+    <nav class="navbar navbar-expand-md text-dark bg-body-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="images/Tour Travel Business Logo.png" alt="logo" width="100"/></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,10 +19,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="#About Section">About</a>
-            <a class="nav-link" href="#Work Section">Travel</a>
-            <a class="nav-link" href="Skills Section">Skills</a>
-            <a class="nav-link" href="Contact Section">Contact Us</a>
+            <a class="nav-link mx-lg-2 btn btn-warning" aria-current="page" href="#About & Contact Us">About</a>
+            <a class="nav-link mx-lg-2 btn btn-warning" href="#TOUr BALi INDONESIa TODAy">Travel</a>
+            <a class="nav-link mx-lg-2 btn btn-warning" href="#EDX BOOT CAMP SKILLS">Skills</a>
+            <a class="nav-link mx-lg-2 btn btn-warning" href="#About & Contact Us">Contact Us</a>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
 
               <!-- Work Section -->
               <div class="container-fluid">
-                <h1 class="Lead text-center p-5 mb-5 mt-5">TOUr BALi INDONESIa TODAy!</h1>
+                <h2 class="Lead text-center p-5 mb-5 mt-5">TOUr BALi INDONESIa TODAy!</h2>
               </div>
 
                 <div class="container align-items-center">
@@ -119,7 +119,7 @@
         <!-- Skills Section -->
           <section class="bg-body-light">
           <div class="grid-container">
-            <h1 class="text-center p-5 mb-3 mt-3">EDX BOOT CAMP SKILLS</h1>
+            <h2 class="text-center p-5 mb-5 mt-5">EDX BOOT CAMP SKILLS</h2>
               <ul class="list-group">
                 <li class="list-group-item list-group-item-primary"><h5 class="text-bold text-center">Skills I Expect To learn From The Skills Bootcamp In Front-end Web Development</h5></li>
                 <li class="list-group-item text-center">Tremendous communication, teamwork, analytic, critical thinking and problem solving skills</li>
@@ -130,6 +130,35 @@
             </div>
             </section>
         <!-- End of Skills Section -->
+
+        <!-- About Section-->
+        <h2 id="About" class="fs-1 p-5 mb-5 mt-5 text-center">About & Contact Us</h2>
+        <div class="row">
+          <div class="col-6">
+            <div class="bg-primary text-white p-5 mt-5 mb-5">
+              <h2>About Us</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nihil voluptate, 
+                sed a iusto praesentium blanditiis earum at animi assumenda tempore, possimus nobis rem? 
+                Sit, nisi autem consequatur porro esse veritatis dolorem ipsum. Magnam delectus voluptatum 
+                rerum doloribus temporibus voluptatem obcaecati, ducimus velit et quisquam ipsa, illum ullam libero officia.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+            <div class="bg-dark text-white p-5 mt-5 mb-5">
+              <h2>Contact Us</h2>
+              <p><a class="link-opacity-100" href="+44 208 297 555">Phone</a></p>
+              <p><a class="link-opacity-100" href="estherbogere@gmail.com">Email</a></p>
+              <p><a class="link-opacity-100" href="https://github.com/Estherbab/Bootstrap-Portfolio">Github</a></p>
+              <p><a class="link-opacity-100" href="https://twitter.com/EstherBogere">Twitter</a></p>
+            </div>
+          </div>
+
+
+
+
+        <!-- End of About Section-->
+      
 
 <!--End of Main Section-->
 
