Added links to the cards section for read more

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Ubud</h5>
                       <p class="card-text">Tegenungan Waterfall is a waterfall in Bali, Indonesia. Located at the village of Tegenungan Kemenuh, Kemenuh Village on the Petanu River in the Gianyar Regency.</p>
-                      <a href="#" class="btn btn-success">Read More</a>
+                      <a href="https://www.youtube.com/watch?v=eA53uAF4mo0&t=230s" class="btn btn-success">Read More</a>
                     </div>
                   </div>
                 </div>
@@ -84,7 +84,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Canggu</h5>
                     <p class="card-text">Kynd Community Cafe in Seminak and Canggu is one of many must visit cafes. Its a modern vegan cafe with smoothie bowls, pizzas & ice cream.</p>
-                    <a href="#" class="btn btn-success">Read More</a>
+                    <a href="https://www.youtube.com/watch?v=eA53uAF4mo0&t=230s" class="btn btn-success">Read More</a>
                   </div>
                 </div>
               </div>
@@ -97,7 +97,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Seminyak</h5>
                   <p class="card-text">Finns Beach Club located in Seminyak is a must visit if you are in Bali, it is the Island's best beach club. Boasting 4 pools, 9 bars, 2 swim up bars, 7 kitchens etc</p>
-                  <a href="#" class="btn btn-success">Read More</a>
+                  <a href="https://www.youtube.com/watch?v=dS0CQv1KYuk" class="btn btn-success">Read More</a>
                 </div>
               </div>
             </div>
@@ -110,7 +110,7 @@
               <div class="card-body">
                 <h5 class="card-title">Ubud</h5>
                 <p class="card-text">Tegalalang Rice Terrace comprises a series of cascading rice fields. A UNESCO World Heritage site, the area is especially popular during sunrise and sunset.</p>
-                <a href="#" class="btn btn-success">Read More</a>
+                <a href="https://www.youtube.com/watch?v=dS0CQv1KYuk" class="btn btn-success">Read More</a>
               </div>
             </div>
           </div>
